# EasyCrawler

./: .gitignore  README.md  requirements.txt  setup.cfg
demo/: conf.yaml  main.py  task1.py  task2.py  test.py  test.txt
easycrawler/: __init__.py  exceptions.py  helps.py  setup.cfg
easycrawler-0.1.0/: PKG-INFO  setup.cfg
easycrawler-0.1.0/easycrawler/: __init__.py  __main__.py  helps.py
easycrawler-0.1.0/easycrawler/cli/: __init__.py  cli_commands.py  cli_console.py
easycrawler-0.1.0/easycrawler/client/: __init__.py
easycrawler-0.1.0/easycrawler/conf/: __init__.py
easycrawler-0.1.0/easycrawler/core/: __init__.py
easycrawler-0.1.0/easycrawler/crawler/: __init__.py
easycrawler-0.1.0/easycrawler/logs/: __init__.py
easycrawler-0.1.0/easycrawler/message/: __init__.py
easycrawler-0.1.0/easycrawler/server/: server.py
easycrawler-0.1.0/easycrawler/storage/: __init__.py
easycrawler-0.1.0/easycrawler/storage/mango/: __init__.py
easycrawler-0.1.0/easycrawler/utils/: __init__.py  common.py  file_util.py  page_util.py  parse_util.py  thread_util.py
easycrawler-0.1.0/easycrawler/worker/: __init__.py  worker.py
easycrawler/cli/: cli_commands.py
easycrawler/client/: __init__.py  client.py
easycrawler/conf/: __init__.py  default.yaml
easycrawler/core/: __init__.py  base_storage.py  base_task.py
easycrawler/crawler/: __init__.py  _http.py  task.py
easycrawler/logs/: __init__.py
easycrawler/master/: __init__.py
easycrawler/message/: __init__.py
easycrawler/protos/: __init__.py  easycrawler.proto  easycrawler_pb2.py  (+1 more)
test/: test.py  test2.py
(+12 files in other folders)
