[metadata]
name = easycrawler
version = 0.1.0
description = 通过反向连接实现的分布式爬虫框架.
author = lkkings
author_email = lkkings888@gmail.com


[options]
packages = find:
python_requires = >=3.7
install_requires =
    drissionpage~=4.1.0.4
    psutil~=6.0.0
    rich~=13.7.1
    lxml~=5.2.2
    click~=8.1.7
    pyyaml~=6.0.1
    lxparse~=1.0.8
    colorama~=0.4.6
    redis~=5.0.6
    tqdm~=4.66.4
    mutagen~=1.47.0
    moviepy~=1.0.3
    pymongo~=4.7.3


[options.entry_points]
console_scripts =
    ec = easycrawler.cli.cli_commands:main